--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,7 @@
         "compilerOptions": {
             "module": "commonjs"
         },
-        "include": [
-            "tests/**/*"
-        ]
+        "include": ["tests/**/*"]
     },
     "compilerOptions": {
         "noImplicitAny": true,
@@ -20,11 +18,6 @@
         "moduleResolution": "node",
         "forceConsistentCasingInFileNames": true
     },
-    "include": [
-        "@types/**/*",
-        "src/**/*"
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+    "include": ["@types/**/*", "src/**/*"],
+    "exclude": ["node_modules"]
 }
