--- a/package.json
+++ b/package.json
@@ -39,6 +39,12 @@
         "url": "https://github.com/tony-sull/svelte-entity-store/issues"
     },
     "homepage": "https://github.com/tony-sull/svelte-entity-store#readme",
+    "type": "module",
+    "exports": {
+        ".": {
+            "import": "./dist/index.mjs"
+        }
+    },
     "devDependencies": {
         "@rollup/plugin-node-resolve": "^11.2.1",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -47,16 +53,15 @@
         "eslint": "^7.25.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
+        "glob": "^10.3.3",
         "prettier": "^2.2.1",
         "rollup": "^2.46.0",
         "rollup-plugin-sucrase": "^2.1.0",
         "sander": "^0.6.0",
         "svelte": "^3.37.0",
-        "tiny-glob": "^0.2.8",
         "ts-node": "^9.1.1",
         "typedoc": "^0.20.36",
         "typescript": "^4.2.4",
         "uvu": "^0.5.1"
-    },
-    "dependencies": {}
+    }
 }
