--- a/package.json
+++ b/package.json
@@ -21,25 +21,28 @@
     "scripts": {
         "doc": "typedoc",
         "lint": "eslint src/ --ext .ts",
-        "build-declarations": "tsc -d && node scripts/move-type-declarations.js",
+        "build-declarations": "tsc -d",
         "build": "npm run build-declarations && rollup -c",
         "dev": "rollup -cw",
         "test": "uvu -r ts-node/register tests",
         "test:coverage": "c8 --include=src npm test",
         "test:report": "c8 report --reporter=text-lcov > coverage.lcov",
         "prepublishOnly": "npm run build",
-        "postinstall": "npm run build"
+        "postinstall": "tsc -p ./tsconfig.json && npm run build"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/tony-sull/svelte-entity-store.git"
+        "url": "git+https://github.com/AminoffZ/svelte-entity-store.git"
     },
     "author": "Tony Sullivan",
+    "contributors": [{
+        "name": "Mauritz Aminoff"
+    }],
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/tony-sull/svelte-entity-store/issues"
     },
-    "homepage": "https://github.com/tony-sull/svelte-entity-store#readme",
+    "homepage": "https://github.com/AminoffZ/svelte-entity-store#readme",
     "type": "module",
     "exports": {
         ".": {
