--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "svelte-entity-store",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "description": "Normalized entity store for Svelte projects",
     "main": "dist/index.js",
     "module": "dist/index.mjs",
@@ -25,7 +25,11 @@
         "build-declarations": "tsc -d && node scripts/move-type-declarations.js",
         "build": "npm run build-declarations && rollup -c",
         "dev": "rollup -cw",
-        "test": "uvu -r ts-node/register tests",
+        "test:uvu": "uvu -r ts-node/register tests/tests-uvu",
+        "test:jest": "jest tests/tests-jest",
+        "test:jest:node": "jest tests/tests-jest/node-tests",
+        "test:jest:dom": "jest tests/tests-jest/dom-tests",
+        "test": "npm run test:uvu && npm run test:jest",
         "test:coverage": "c8 --include=src npm test",
         "test:report": "c8 report --reporter=text-lcov > coverage.lcov",
         "prepublishOnly": "npm run build"
@@ -53,6 +57,7 @@
     },
     "devDependencies": {
         "@rollup/plugin-node-resolve": "^11.2.1",
+        "@types/jest": "^29.5.4",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
         "c8": "^7.7.1",
@@ -61,14 +66,17 @@
         "eslint-plugin-prettier": "^3.4.0",
         "gh-pages": "^6.0.0",
         "glob": "^10.3.3",
+        "jest": "^29.6.4",
+        "jest-environment-jsdom": "^29.6.4",
         "prettier": "^2.2.1",
         "rollup": "^2.46.0",
         "rollup-plugin-sucrase": "^2.1.0",
         "sander": "^0.6.0",
         "svelte": "^3.37.0",
+        "ts-jest": "^29.1.1",
         "ts-node": "^9.1.1",
-        "typedoc": "^0.20.36",
-        "typescript": "^4.2.4",
+        "typedoc": "^0.21.0",
+        "typescript": "^4.9.5",
         "uvu": "^0.5.1"
     }
 }
