--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -1,23 +1,16 @@
 {
-    "ts-node": {
-        "transpileOnly": true,
-        "compilerOptions": {
-            "module": "commonjs"
-        },
-        "include": ["./tests/**/*"]
-    },
     "compilerOptions": {
         "noImplicitAny": true,
         "noImplicitThis": true,
         "noEmitOnError": true,
         "diagnostics": true,
-        "outDir": "dist",
         "target": "esnext",
         "module": "esnext",
         "declaration": true,
         "moduleResolution": "node",
         "forceConsistentCasingInFileNames": true,
+        "skipDefaultLibCheck": true
     },
-    "include": ["@types/**/*", "./src/**/*"],
+    "include": ["**/*.test.ts"],
     "exclude": ["node_modules"]
 }
