--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "svelte-entity-store",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "description": "Normalized entity store for Svelte projects",
     "main": "dist/index.js",
     "module": "dist/index.mjs",
@@ -58,25 +58,26 @@
     "devDependencies": {
         "@rollup/plugin-node-resolve": "^11.2.1",
         "@types/jest": "^29.5.4",
-        "@typescript-eslint/eslint-plugin": "^4.22.0",
-        "@typescript-eslint/parser": "^4.22.0",
-        "c8": "^7.7.1",
-        "eslint": "^7.25.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^3.4.0",
+        "@typescript-eslint/eslint-plugin": "^6.4.1",
+        "@typescript-eslint/parser": "^6.4.1",
+        "c8": "^8.0.1",
+        "eslint": "^8.47.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.0",
+        "eslint-plugin-svelte3": "^4.0.0",
         "gh-pages": "^6.0.0",
         "glob": "^10.3.3",
         "jest": "^29.6.4",
         "jest-environment-jsdom": "^29.6.4",
-        "prettier": "^2.2.1",
+        "prettier": "^3.0.2",
         "rollup": "^2.46.0",
         "rollup-plugin-sucrase": "^2.1.0",
         "sander": "^0.6.0",
         "svelte": "^3.37.0",
         "ts-jest": "^29.1.1",
         "ts-node": "^9.1.1",
-        "typedoc": "^0.21.0",
-        "typescript": "^4.9.5",
-        "uvu": "^0.5.1"
+        "typedoc": "^0.24.8",
+        "typescript": "^5.1.6",
+        "uvu": "^0.5.6"
     }
 }
