--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "module": "esnext",
         "declaration": true,
         "moduleResolution": "node",
-        "forceConsistentCasingInFileNames": true,
+        "forceConsistentCasingInFileNames": true
     },
     "include": ["@types/**/*", "./src/**/*"],
     "exclude": ["node_modules"]
