--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,7 +25,7 @@ jobs:
     timeout-minutes: 3
     strategy:
       matrix:
-        nodejs: [10, 12, 14]
+        nodejs: [16]
         os: [ubuntu-latest, windows-latest]
     steps:
     - uses: actions/checkout@v2
